--- a/Assets/ToDo.txt
+++ b/Assets/ToDo.txt
@@ -2,17 +2,22 @@ For Game Design
 
 Gameplay - priority for testing on Friday
 
+
+Start/Quit Menu - add
+player "Ready" - add
+add timer to win screen
+add menu selct boxes for all players - done
+
 Robot - setup 
 
 
 Lower Priority
 
 wizard - additional setup
-Start/Quit Menu - add
-player "Ready" - add
+
 knockback direction away from hitbox
-add timer to win screen
-add menu selct boxes for all players
+
+
 update dungeon level
 
 look into character selection with analog input
